# vulkan_rt

./: .gitignore  .gitlab-ci.yml  .runsettings  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  GenerateVisualStudioProject.bat  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_docker.md  RenameProject.ps1  TODO.txt  build.bat  conan_install.bat  conanfile.txt
.github/: constants.env
.github/workflows/: ci.yml  codeql-analysis.yml  template-janitor.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Emscripten.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  VCEnvironment.cmake
configured_files/: config.hpp.in
docs/: Doxyfile  generate_docs.bat
include/cmake_template_project/: sample_library.hpp
scenes/: cornell_showcase.json
shaders/: closesthit.rchit  miss.rmiss  raygen.rgen  raygen_dome.rgen
src/: CMakeLists.txt  main.cpp
src/app/: AppConfig.cpp  AppConfig.hpp  Application.cpp  Application.hpp  Input.cpp  Input.hpp  SdlSurfaceProvider.cpp  SdlSurfaceProvider.hpp  UiLayer.cpp  UiLayer.hpp  VulkanContextSmoke.cpp  VulkanContextSmoke.hpp  Window.cpp  Window.hpp
src/compiler/: compiler.cpp  compiler.h
src/engine/: Engine.cpp  Engine.hpp  EngineConfig.cpp  EngineConfig.hpp  FrameStats.hpp
src/event/: event.cpp  event.h
src/filesystem/: filesystem.cpp  filesystem.h  os_filesystem.cpp  os_filesystem.h  path_utils.cpp  path_utils.h
src/input/: InputSystem.cpp  InputSystem.hpp  input.cpp  input.h
src/math/: CMakeLists.txt  helpers.h  math_common.h  rect2.cpp  rect2.h  rect2i.cpp  rect2i.h
src/render/: NullRenderer.cpp  NullRenderer.hpp  Renderer.hpp
src/render/vulkan/: AccelerationStructure.cpp  AccelerationStructure.hpp  OneShotCommandBuffer.cpp  OneShotCommandBuffer.hpp  RayTracingCamera.cpp  RayTracingCamera.hpp  RayTracingCameraData.hpp  RayTracingDescriptorSet.cpp  RayTracingDescriptorSet.hpp  RayTracingFrameData.cpp  RayTracingFrameData.hpp  RayTracingPipeline.cpp  RayTracingPipeline.hpp  RayTracingScene.cpp  RayTracingScene.hpp  ShaderBindingTable.cpp  ShaderBindingTable.hpp  ShaderModule.cpp  ShaderModule.hpp  SurfaceProvider.hpp  VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCheck.cpp  VulkanCheck.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameResources.cpp  VulkanFrameResources.hpp  VulkanImGui.cpp  VulkanImGui.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanRendererConfig.hpp  VulkanSwapchain.cpp  (+1 more)
src/scene/: Camera.cpp  Camera.hpp  Scene.cpp  Scene.hpp  SceneDescription.cpp  SceneDescription.hpp  gltf_loader.cpp  gltf_loader.h
src/util/: _mutex.h  aligned_alloc.cpp  aligned_alloc.h  allocator.cpp  arena_allocator.cpp  arena_allocator.h  async_object_sink.h  atomic_append_buffer.h  bit_field.h  dynamic_array.h  dynamic_library.cpp  environment.cpp  environment.h  error_list.cpp  error_list.h  error_macros.cpp  error_macros.h  generational_handle.h  hash.h  hash_func.h  hashmap.h  intrusive_hash_map.h  logger.cpp  logger.h  lru_cache.h  message_queue.h  object_pool.h  profiler.h  radix_sorter.h  renderdoc_helpers.h  rid.h  rid_owner.h  slab_allocator.cpp  slab_allocator.h  small_vector.h  string_helpers.cpp  string_helpers.h  temporary_hashmap.h  thread_id.cpp  thread_name.cpp  (+6 more)
test/: CMakeLists.txt  camera_tests.cpp  engine_tests.cpp  ray_tracing_camera_tests.cpp  render_tests.cpp  scene_description_tests.cpp  scene_tests.cpp  test_main.cpp
web/: shell_template.html.in
